log
g++ -o test main.cpp string.cpp lbfgs.c node.cpp -pthread -lfftw3 -lm -lgsl -lblas -std=c++11 #-Wall -Wunused-variable 
string.cpp: In member function ‘void String::newstring()’:
string.cpp:88:85: error: cannot convert ‘Node::evaluate’ from type

‘lbfgsfloatval_t (Node::)(void*, const double*, double*, int, lbfgsfloatval_t) {aka double (Node::)(void*, const double*, double*, int, double)}’
to type
‘lbfgs_evaluate_t {aka double (*)(void*, const double*, double*, int, double)}’
   ret = lbfgs(n,bead.Anm,&(bead.Energy),bead.evaluate,bead.progress,NULL,&bead.param);
                                                                                     ^
make: *** [test] 错误 1
